--- a/resume.css
+++ b/resume.css
@@ -5,20 +5,20 @@ body {
     margin: 0 auto;
     text-align: auto;
     margin-left: 20%;
-    width: 940px;
+   /*width: 940px;*/
     font: 17px/22px Helvetica, Arial, sans-serif;
 
 }
 
 .resume_body {
-        display: table; width: 80%;
+        display: table; width: 90%;
         margin-top: 5px
 
  }
 
 .Header_Box{
     padding-top: 50px;
-    width:100%;
+    width:65%;
     height:200px;
     background:#F7C331;
     margin:100px auto;
