--- a/resume.css
+++ b/resume.css
@@ -5,13 +5,14 @@ body {
     margin: 0 auto;
     text-align: auto;
     margin-left: 10%;
-   /*width: 940px;*/
+    /*width: 940px;*/
     font: 17px/22px Helvetica, Arial, sans-serif;
 
 }
 
 .resume_body {
-        display: table; width: 90%;
+        display: table; 
+        width: 90%;
         margin-top: 5px
 
  }
@@ -25,6 +26,9 @@ body {
     text-align: center;
 }
 
+/*==================================================
+ * Effect 5
+ * ===============================================*/
 .effect5
 {
   position: relative;
@@ -57,7 +61,7 @@ h2 {
     font-size: 28px;
     line-height: 44px;
     padding: 3px 0;
-    color: #F7C331;
+    color: #006064;
 }
  
 h3 {
@@ -76,9 +80,9 @@ p {
 }
 
 table {
-color:#fff;
+color:#555554 
 border-collapse: collapse;
-padding:0 3px;
+padding:0px;
 border-radius: 5px;
 margin-left: 0px;
 }
@@ -87,18 +91,18 @@ td, th {
 height:30px;
 text-align:center;
 padding: 5px 40px;
-border: 1px solid #000;
+border: 0px solid#000000     ;
 width: auto;
 }
 
 th {
-background:#000;
+background:#F7C331;
 font-weight:70;
 }
 
 tr td {
 background:#fff;
-color:#000;
+color:#555555;
 }
 
 
